Started updating documentation and added a trueToSizeCalculation to the get product endpoint
