# src/routes/reviewsRouter.ts
@@ -1,0 +1,10 @@
+import express from 'express';
+import {
+  createReview,
+} from '../controllers/reviews';
+
+const router = express.Router();
+
+router.post('/:productId/reviews', createReview);
+
+export default router;
